# TKOM-interpreter-language

./: CMakeLists.txt  README.md  main.cpp
docs/: TKOM-Dokumentacja-koncowa-Dominik-Nowak.docx  TKOM-Dokumentacja-wstępna-Dominik-Nowak.docx
examples/: currency_config.cfg  currency_config2.cfg  example1.cfg  example1.txt  example2.txt  test_example.txt  test_example2.txt  text.txt
src/: CMakeLists.txt
src/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
src/Elements/: CMakeLists.txt  IElement.h  OperatorType.h  Parameter.cpp  Parameter.h  Program.cpp  Program.h  Type.h
src/Elements/Expression/: AddExpr.cpp  AddExpr.h  AndExpr.cpp  AndExpr.h  CMakeLists.txt  ConversionExpr.cpp  ConversionExpr.h  CurrencyExpr.cpp  CurrencyExpr.h  DivExpr.cpp  DivExpr.h  FunCallExpr.cpp  FunCallExpr.h  GreaterExpr.cpp  GreaterExpr.h  GreaterOrEqualExpr.cpp  GreaterOrEqualExpr.h  IExpression.h  IdentifierExpr.cpp  IdentifierExpr.h  IsEqualExpr.cpp  IsEqualExpr.h  LessExpr.cpp  LessExpr.h  LessOrEqualExpr.cpp  LessOrEqualExpr.h  LiteralExpr.cpp  LiteralExpr.h  MinusNegExpr.cpp  MinusNegExpr.h  MultExpr.cpp  MultExpr.h  NegationExpr.cpp  NegationExpr.h  NotEqualExpr.cpp  NotEqualExpr.h  OrExpr.cpp  OrExpr.h  StringLiteralExpr.cpp  StringLiteralExpr.h  (+2 more)
src/Elements/Interpretation/: CMakeLists.txt  CallContext.cpp  CallContext.h  Environment.cpp  Environment.h  Scope.cpp  Scope.h  Variable.cpp  Variable.h
src/Elements/Statement/: AssignmentStatement.cpp  AssignmentStatement.h  CMakeLists.txt  EmbeddedFunction.cpp  EmbeddedFunction.h  FunctionCallStatement.cpp  FunctionCallStatement.h  FunctionDefinition.cpp  FunctionDefinition.h  IStatement.h  IfStatement.cpp  IfStatement.h  InitializeStatement.cpp  InitializeStatement.h  ReturnStatement.cpp  ReturnStatement.h  WhileStatement.cpp  WhileStatement.h
src/ErrorHandler/: CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.h  Errors.h  InterpreterExceptions.h
src/ErrorHandler/ErrVisitors/: CMakeLists.txt  ErrVisitorEng.cpp  ErrVisitorEng.h  IErrVisitor.h
src/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
src/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
src/Token/: CMakeLists.txt  Token.cpp  Token.h  TokenType.h
src/Visitors/: CMakeLists.txt  IVisitor.h
src/Visitors/InterpreterVisitor/: CMakeLists.txt  InterpreterVisitor.cpp  InterpreterVisitor.h
src/Visitors/LogVisitor/: CMakeLists.txt  LogVisitor.cpp  LogVisitor.h
src/Visitors/SemanticVisitor/: CMakeLists.txt  SemanticVisitor.cpp  SemanticVisitor.h
src/utils/: utils.cpp  utils.h
tests/lexer/: CMakeLists.txt  lexerAdvanceTests.cpp  lexerExampleTests.cpp  lexerSingleTokens.cpp
tests/parser/: CMakeLists.txt  configParserTests.cpp  parserBasicTests.cpp  parserThrowTests.cpp
