add_library(OrExpr OrExpr.cpp)
add_library(AndExpr AndExpr.cpp)

add_library(NegationExpr NegationExpr.cpp)

add_library(IsEqualExpr IsEqualExpr.cpp)
add_library(NotEqualExpr NotEqualExpr.cpp)
add_library(LessOrEqualExpr LessOrEqualExpr.cpp)
add_library(GreaterOrEqualExpr GreaterOrEqualExpr.cpp)
add_library(LessExpr LessExpr.cpp)
add_library(GreaterExpr GreaterExpr.cpp)

add_library(AddExpr AddExpr.cpp)
add_library(SubExpr SubExpr.cpp)

add_library(MultExpr MultExpr.cpp)
add_library(DivExpr DivExpr.cpp)

add_library(MinusNegExpr MinusNegExpr.cpp)

add_library(LiteralExpr LiteralExpr.cpp)
add_library(IdentifierExpr IdentifierExpr.cpp)
add_library(FunCallExpr FunCallExpr.cpp)

add_library(StringLiteralExpr StringLiteralExpr.cpp)

add_library(ConversionExpr ConversionExpr.cpp)
add_library(CurrencyExpr CurrencyExpr.cpp)


